# chesso

./: .gitmodules  CMakeLists.txt  README.md
pixello/src/: pixello.cpp
src/: CMakeLists.txt  board.cpp  board.hpp  chess.cpp  chess.hpp  chesso.cpp  chesso.hpp  data_structs.hpp  exceptions.hpp  gui.cpp  gui.hpp  gui_data_struct.cpp  gui_data_struct.hpp  main.cpp  move_generator.hpp  piece.hpp  utils.hpp
src_old/: CMakeLists.txt  gui.hpp  log.hpp  utils.hpp
